tests/vertical-slice/accept/vec_pop_empty_traps.hew
// `Vec.pop()` on an empty Vec fails closed through the runtime bounds trap. In
// main context there is no actor recovery frame, so the runtime trap helper
// aborts the process and run.sh pins exit 134.
fn main() -> i64 {
    let xs: Vec<i64> = Vec::new();
    let x = xs.pop();
    x
}

